--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/**/*.{js,jsx}",
     "prepare": "husky install",
@@ -45,5 +45,13 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2",
     "husky": "^9.0.11"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/components/**/*.{js,jsx}"
+    ],
+    "coverageReporters": [
+      "lcov"
+    ]
   }
 }
