--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint ./src/**/*.{js,jsx}",
     "prepare": "husky install",
-    "commitlint": "commitlint --edit"
+    "commitlint": "commitlint --edit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,11 +46,25 @@
     ]
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.2.24",
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
+    "@storybook/addon-essentials": "^8.0.2",
+    "@storybook/addon-interactions": "^8.0.2",
+    "@storybook/addon-links": "^8.0.2",
+    "@storybook/addon-onboarding": "^8.0.2",
+    "@storybook/blocks": "^8.0.2",
+    "@storybook/preset-create-react-app": "^8.0.2",
+    "@storybook/react": "^8.0.2",
+    "@storybook/react-webpack5": "^8.0.2",
+    "@storybook/test": "^8.0.2",
     "cypress": "^13.7.0",
     "eslint-plugin-react": "^7.33.2",
-    "husky": "^9.0.11"
+    "eslint-plugin-storybook": "^0.8.0",
+    "husky": "^9.0.11",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.0.2",
+    "webpack": "^5.90.3"
   },
   "jest": {
     "collectCoverageFrom": [
